on-premise/kubernetes/uptime-kuma/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: uptime.devops.hieuduyne.tech
      http:
        paths:
          - backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
            path: /
            pathType: Prefix
